# ForwardPlus_Vulkan

./: .gitignore  CMakeLists.txt  HelloTriangle_Vulkan.sln  HelloTriangle_Vulkan.vcxproj  HelloTriangle_Vulkan.vcxproj.filters  README.md
data/: chart.xlsx
src/: HelloTriangleApplication.h  VDeleter.h  VulkanBaseApplication.cpp  VulkanBaseApplication.h  VulkanTools.cpp  camera.h  main.cpp
src/models/crytek-sponza/: sponza.mtl
src/models/hylas/: a484r.mtl
src/shaders/: axis.frag  axis.frag.spv  axis.vert  axis.vert.spv  compile.bat  compute.comp  compute.comp.spv  computeFrustumGrid.comp  computeFrustumGrid.comp.spv  computeLightList.comp  computeLightList.comp.spv  final_shading.frag  final_shading.frag.spv  final_shading.vert  final_shading.vert.spv  quad.frag  quad.frag.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
x64/Debug/: HelloTriangle_Vulkan.ilk  vc140.idb
x64/Debug/HelloTri.CE603277.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HelloTriangle_Vulkan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: HelloTriangle_Vulkan.iobj  HelloTriangle_Vulkan.ipdb
x64/Release/HelloTri.CE603277.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HelloTriangle_Vulkan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
